# wbai-archive

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  server.js
.github/workflows/: desktop-windows.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  ROADMAP.md  TAURI.md  modal-live-audio-player.md
public/: app.js  index.html  manifest.webmanifest  styles.css
public/data/: shows-fallback.json
