[package]
name = "wbai-archive"
version = "1.0.0"
description = "WBAI 99.5 FM Archive"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
